Adding Support for External Teachers